# geom

./: .gitignore  CMakeLists.txt  README.md
include/geom/: algorithms.h  algorithms2D.h
test/: CMakeLists.txt  main.cpp
